логика рекомендованных книг по куки